--- a/textbf_TODO_LO_QUE_ESTA__.tex
+++ b/textbf_TODO_LO_QUE_ESTA__.tex
@@ -9,9 +9,11 @@ The most widely used definition of machine learning is attributed to Tom Mitchel
 "A computer program is said to learn from experience E with respect to some class of tasks T and performance measure P if its performance at tasks in T, as measured by P, improves with experience E" . To our purpose it is clear though that this definition \footnote{Other authors might reference mahchine learning as \textit{statistical learning}. See CITA A HASTIE TIBSHIRANIE} is not formally well-defined. However it serves to convey the idea of algorithms that automatically \textit{learns} better over time and with more data. Note that the "goodness" of their performance is inherently subjected to the evaluation criteria chosen for the task. Because of this,\textit{learning} is less associated with a cognitive definition in this context and more to a performance based approach.
 
 
-It is divided into two main categories: Supervised and Unsupervised. The difference is that in the fist case algorithms are set to produce outputs, noted by $Y$, from input data, noted by $X$ i.e. the computer has access to examples of outputs and tries to reproduce them based on information contained in $X$. The second type of problems is where the output data is missing altogether from data. In this scenario the most common objectives are clustering samples, density estimation and data compression. Linear regression and K-means clustering are examples of algorithms in each of these categories respectively.
+It is divided into two main categories: Supervised and Unsupervised. The difference is that in the fist case algorithms are set to produce outputs, noted by $Y$, from input data, noted by $X$ i.e. the computer has access to examples of outputs and tries to reproduce them based on information contained in $X$. Here, the algorithm is generally referred to as a \textit{learner}.
 
-Supervised learning is then sub-categorized according to the type of information available in the data for the task at hand. When outputs $Y$ are encoding samples into classes then it is said that it is a supervised classification problem. On the other hand, when the output takes continuous (or $\mathbb{R}$ dense) range of values the problem is said to be of supervised regression. For this work we will focus on the supervised aspect of machine learning.
+The second type of problems is where the output data is missing altogether from data. In this scenario the most common objectives are clustering samples, density estimation and data compression. Linear regression and K-means clustering are examples of algorithms in each of these categories respectively.
+
+Supervised learning is then sub-categorized according to the type of information available in the data for the task at hand. When outputs $Y$ types' are of a \textit{qualitative} nature then then it is said that it is a supervised classification problem. On the other hand, when the output takes continuous (or $\mathbb{R}$ dense) range of \textit{quantitative} values the problem is said to be of supervised regression. For this work we will focus on the supervised aspect of machine learning.
 
 \subsubsection{Notation}
 
@@ -35,7 +37,7 @@ Sepal length & Sepal width & Petal length & Petal width & Species \\
 \end{tabular}
 \end{table}
 
-Here rows are representing available data for each flower and columns represent types of measurements or information. In general, most machine learning problems will be associated with a training set  $\mathrm{T}$ of similar form as the one shown before. Where rows represent objects or \textit{samples} and columns are measurements or \textit{features} of our samples. Note that even though the last column of the dataset in \ref{tab:iris_dataset} is not really a measurement, it gives information on each flower's species. Examples of problems that a machine learning algorithm could tackle from this data are: 
+In this form a row is representing the available data for each flower and columns represent types of measurements or information. In general, most machine learning problems will be associated with a training set  $\mathrm{T}$ of similar form as the one shown before. Where rows represent objects or \textit{samples} and columns are measurements or \textit{features} of our samples. Note that even though the last column of the dataset in \ref{tab:iris_dataset} is not really a measurement, it gives information on each flower's species. Examples of problems that a machine learning algorithm could tackle from this data are: 
 
 \begin{itemize}
 	\item Predict a flower's species when given information on only the first four measurements.
@@ -43,21 +45,22 @@ Here rows are representing available data for each flower and columns represent 
 	\item Give an estimate of the probability density function for a flower's sepal width.
 \end{itemize}
 
-The first two problems are examples of supervised learning problems where the $Y$ variables or \textit{targets} are the last and first features (columns) respectively. Even more, the first problem is a classification one since flowers have to be classified in one of the three possible species and the second one is a regression problem for which the output could be any number of possible values in a range.
+The first two problems are examples of supervised learning where the $Y$ variables or \textit{labels} are the last and first features (columns) respectively. Even more, the first problem is a classification one since flowers are to be classified in one of the three possible species and the second one is a regression problem for which the output could be any of a range of numerical values. The labels in classification problems are numerically encoded with a finite range of numbers being usually ${0,1}$ or ${-1,1}$ for the binary case.
 
-Note here that we are not assuming nothing about the data and it is given to us in this way. Thus, the type of problems and questions that could be done depends entirely on the training set. Sometimes the target variable is as also referred to as the \textit{label}. In this context, both have the same meaning.
+Note here that we are not assuming nothing about the data and it is given to us in this way. This is common in machine learning applications and algorithms tend to account for this situation. The type of problems and questions that could be done then depend entirely on the training set. 
 
-The last problem is an example of a unsupervised problem where there is no need to have a label on the data and the question is on the structure of a specific column, namely the unobservable probability distribution underlying the sepal width.
+The last example problem in the list belongs to the unsupervised learning category where there is no need to have a label on the data. Here the question is on the structure of a specific column, namely the unobservable probability distribution underlying the sepal width. There is no output expected for new samples.
+
+To illustrate further the supervised classification scenario, a brief notation outline is described below, following a standard logistic regression classifier example:
+
+Let's suppose that the problem is to determine if a flower belongs to the \textit{setosa} species or any other, bringing us to a two class learning problem.
+ 
+The objective is to build a learner $f$ from a linear combination of the input features that will predict the target output. Ideally we would have that for every sample $y =  f(\sum_{j}\theta_jx_j)$. In practical cases thought, the learner will approximate the target with $y \approx \hat{y} = f(\sum_{j}\theta_jx_j)$. Then 
+
+At this point it is important to start noting certain subtleties in the standard terminology used for machine learning. Most terms have equivalent or similar notations in other closely related areas of knowledge like statistics. As it was shown before the \textit{dependent} $Y$ is called the target or label. Also, the \textit{independent} variables or \textit{covariates} are named as features and their 
+Labels that are representing categorical or discrete variables are also named factors or \textit{qualitative} variables. 
 
 
-
-For supervised classification algorithms, a brief notation outline is described below, following a standard logistic regression classifier example:
-
-
-The objective is
-
-
-It is important to start noting at this point certain subtleties in the naming convention used for machine learning and the objectives it perpetrates. Most terms have equivalent notations in other closely relted areas of knowledge like statistics. 
 
 A typical machine learning problem starts with an object of study, for example flowers, and data collected from these objects. In the flower scenario 
 
@@ -85,7 +88,6 @@ Supervised machine learning refers to the
 
 
 \subsection{}
-
 \section{Bias, Variance, Generalization and Model Complexity}
 
 \subsection{Hastie Tibshiranie Friedman}
