--- a/section_Random_Forests_section_Hastie__.tex
+++ b/section_Random_Forests_section_Hastie__.tex
@@ -1,4 +1,13 @@
-\section{Random Forests}
+\textbf{ACA ARRANCAN LAS DESCRIPCIONES TECNICAS Y TEORICAS DE CADA CLASIFICADOR}
+La idea es contar de 4/5 clasificadores usuales como:
+
+\begin{itemize}
+	\item multinomial naive bayes (por su simplicidad y eficiencia computacional)
+	\item "full" logistic regression (a diferencia de la intro anterior con la parte de regularizacion, con comentarios a sgd y su eficiencia, etc. )
+	\item Give an estimate of the probability density function for a flower's sepal width.
+\end{itemize}
+
+\section{Classifier : Random Forests}
 
 \section{Hastie Tibshiranie Friedman}
 
