--- a/textbf_ACA_ARRANCAN_LAS_DESCRIPCIONES__.tex
+++ b/textbf_ACA_ARRANCAN_LAS_DESCRIPCIONES__.tex
@@ -4,7 +4,8 @@ La idea es contar de 4/5 clasificadores usuales como:
 \begin{itemize}
 	\item multinomial naive bayes (por su simplicidad y eficiencia computacional)
 	\item "full" logistic regression (a diferencia de la intro anterior con la parte de regularizacion, con comentarios a sgd y su eficiencia, etc. )
-	\item Give an estimate of the probability density function for a flower's sepal width.
+	\item Random Forests
+	\item extension a gradient boosting
 \end{itemize}
 
 \section{Classifier : Random Forests}
