--- a/textbf_ACA_ARRANCAN_LAS_DESCRIPCIONES__.tex
+++ b/textbf_ACA_ARRANCAN_LAS_DESCRIPCIONES__.tex
@@ -5,7 +5,8 @@ La idea es contar de 4/5 clasificadores usuales como:
 	\item multinomial naive bayes (por su simplicidad y eficiencia computacional)
 	\item "full" logistic regression (a diferencia de la intro anterior con la parte de regularizacion, con comentarios a sgd y su eficiencia, etc. )
 	\item Random Forests
-	\item extension a gradient boosting
+	\item Extension a gradient boosting
+	\item Comentarios sobre Boltzmann machines ( sin adentrarnos mucho en redes neuronales ) y Bernoulli RestrictedBM.
 \end{itemize}
 
 \section{Classifier : Random Forests}
