--- a/textbf_TODO_LO_QUE_ESTA__.tex
+++ b/textbf_TODO_LO_QUE_ESTA__.tex
@@ -1,5 +1,12 @@
+La idea es contar de 4/5 clasificadores usuales como:
 
-\textbf{TODO LO QUE ESTA EN ITALICA ES TIPO HIGHLIGHTER}
+\begin{itemize}
+	\item multinomial naive bayes (por su simplicidad y eficiencia computacional)
+	\item "full" logistic regression (a diferencia de la intro anterior con la parte de regularizacion, con comentarios a sgd y su eficiencia, etc. )
+	\item Random Forests
+	\item Extension a gradient boosting
+	\item Comentarios sobre Boltzmann machines ( sin adentrarnos mucho en redes neuronales ) y Bernoulli RestrictedBM.
+\end{itemize}
 
 \section{ Brief introduction to machine learning and supervised classification problems}
 
