--- a/textbf_ACA_ARRANCAN_LAS_DESCRIPCIONES__.tex
+++ b/textbf_ACA_ARRANCAN_LAS_DESCRIPCIONES__.tex
@@ -1,5 +1,9 @@
 \textbf{ACA ARRANCAN LAS DESCRIPCIONES TECNICAS Y TEORICAS DE CADA CLASIFICADOR}
 
+Notar que todo lo que esta en italica es tipo highlighter de textos de otros autores :)
+%NOTAR QUE TO LO QUE ESTA EN ITALICA ES TIPO HIGHLIGHTER DE OTROS TEXTOS DE OTROS AUTORES}
+
+
 \section{Classifier : Random Forests}
 
 \section{Hastie Tibshiranie Friedman}
