--- a/La_idea_es_contar_de__.tex
+++ b/La_idea_es_contar_de__.tex
@@ -1,5 +1,8 @@
-La idea es contar de 4/5 clasificadores usuales como:
+Primero, dar una introduccion a Machine Learning, que es, que hace, notacion, como se usa y algunos aspectos mas de "cambio de paradigma" o "filosofia" o como quieran llamarlo. Comentar algo del foco en training error, predictive power, generalizaciones,etc
 
+Despues de cross validation, variance, bias, errors, metrics, scores y similar.
+
+Finalizar con 4/5 clasificadores usuales como: 
 \begin{itemize}
 	\item multinomial naive bayes (por su simplicidad y eficiencia computacional)
 	\item "full" logistic regression (a diferencia de la intro anterior con la parte de regularizacion, con comentarios a sgd y su eficiencia, etc. )
