--- a/Primero_dar_una_introduccion_a__.tex
+++ b/Primero_dar_una_introduccion_a__.tex
@@ -1,6 +1,6 @@
-Primero, dar una introduccion a Machine Learning, que es, que hace, notacion, como se usa y algunos aspectos sobre el "cambio de paradigma" o "filosofia" o como quieran llamarlo. Comentar algo del foco en training error, predictive power, generalizaciones,etc
+Primero, dar una introduccion a Machine Learning, que es, que hace, notacion, como se usa, supervised learning, clasificadores y algunos aspectos sobre el "cambio de paradigma" o "filosofia" o como quieran llamarlo. Comentar algo del foco en training error, predictive power, generalizaciones,etc
 
-Despues de cross validation, variance, bias, errors, metrics, scores y similar.
+Despues, cross validation, variance, bias, errors, metrics, scores y similar.
 
 Finalizar con 4/5 clasificadores usuales como: 
 \begin{itemize}
