--- a/Primero_dar_una_introduccion_a__.tex
+++ b/Primero_dar_una_introduccion_a__.tex
@@ -1,8 +1,8 @@
-Primero, dar una introduccion a Machine Learning, que es, que hace, notacion, como se usa, supervised learning, clasificadores y algunos aspectos sobre el "cambio de paradigma" o "filosofia" o como quieran llamarlo. Comentar algo del foco en training error, predictive power, generalizaciones,etc
+\textbf{Primero}, dar una introduccion a Machine Learning, que es, que hace, notacion, como se usa, supervised learning, clasificadores y algunos aspectos sobre el "cambio de paradigma" o "filosofia" o como quieran llamarlo. Comentar algo del foco en training error, predictive power, generalizaciones,etc
 
-Despues, cross validation, variance, bias, errors, metrics, scores y similar.
+\textbf{Despues} cross validation, variance, bias, errors, metrics, scores y similar.
 
-Finalizar con 4/5 clasificadores usuales como: 
+\textbf{Finalizar} con 4/5 clasificadores usuales como: 
 \begin{itemize}
 	\item multinomial naive bayes (por su simplicidad y eficiencia computacional)
 	\item "full" logistic regression (a diferencia de la intro anterior con la parte de regularizacion, con comentarios a sgd y su eficiencia, etc. )
