--- a/textbf_Primero_dar_una_introduccion__.tex
+++ b/textbf_Primero_dar_una_introduccion__.tex
@@ -1,3 +1,5 @@
+\section{Meta Section: Writing plan for this Chapter}
+
 \textbf{Primero}, dar una introduccion a Machine Learning, que es, que hace, notacion, como se usa, supervised learning, clasificadores y algunos aspectos sobre el "cambio de paradigma" o "filosofia" o como quieran llamarlo. Comentar algo del foco en training error, predictive power, generalizaciones,etc
 
 \textbf{Despues} cross validation, variance, bias, errors, metrics, scores y similar.
