--- a/section_Meta_Section_Writing_plan__.tex
+++ b/section_Meta_Section_Writing_plan__.tex
@@ -1,6 +1,6 @@
 \section{Meta Section: Writing plan for this Chapter}
 
-\textbf{Primero}, dar una introduccion a Machine Learning, que es, que hace, notacion, como se usa, supervised learning, clasificadores y algunos aspectos sobre el "cambio de paradigma" o "filosofia" o como quieran llamarlo. Comentar algo del foco en la data, el training error, predictive power, generalizaciones,etc . Ir llevando todo con un ejemplo sobre el Iris dataset y un logistic classifeir.
+\textbf{Primero}, dar una introduccion a Machine Learning, que es, que hace, notacion, como se usa, supervised learning, clasificadores y algunos aspectos sobre el "cambio de paradigma" o "filosofia" o como quieran llamarlo. Comentar algo del foco en la data, el training error, predictive power, generalizaciones,etc . Ir llevando todo con un ejemplo sobre el Iris dataset y un logistic classifier.
 
 \textbf{Despues} cross validation, variance, bias, errors, metrics, scores y similar.
 
