--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -52,12 +52,14 @@
 
 
 
-@article{enns2013human,
-  title = {{Human Mobility and Communication Patterns in Cote d’Ivoire: A Network Perspective for Malaria Control}},
-  author = {Enns, E and Amuasi, J},
-  journal = {NetMob D4D Challenge},
-  pages = {1--14},
-  year = {2013},
+@article{Mitchell-MLearning,
+  title = {{Machine Learning}},
+  author = {Mitchell, T.},
+  keywords = {ml statistics},
+  publisher = {McGraw Hill},
+  pages = {2--2},
+  year = {1997},
+  ISBN = {0-07-042807-7}
 }
 
 
