--- a/subsubsection_Notation_For_the_purpose__.tex
+++ b/subsubsection_Notation_For_the_purpose__.tex
@@ -56,11 +56,9 @@ Other subtleties worth noting is the
 
 \textit{any reasonable machine learning method can be formulated as a formal probabilistic model, so in this sense machine learning is very much the same as statistics, but it differs in that it generally doesn't care about parameter estimates (just prediction) and it focuses on computational efficiency and large datasets.}
 
-(CITAR BREIMAN TWO cultures IN STATISTICal modelling)
+(CITAR BREIMAN \cite{breiman-statisticalmodeling} TWO cultures IN STATISTICal modelling)
 
 typically shown as 
-
-
 
 
 %Their merits have already been put to the test both academically and industrially
