--- a/section_Brief_introduction_to_machine__1.tex
+++ b/section_Brief_introduction_to_machine__1.tex
@@ -10,4 +10,4 @@ It is divided into two main categories: Supervised and Unsupervised Learning. Th
 
 The second type of problems is where the output $Y$ is missing altogether from the data. In this scenario the most common objectives are clustering samples, density estimation and data compression. Linear regression and K-means clustering are examples of algorithms in each of these categories respectively.
 
-Supervised learning is then sub-categorized according to the type of information available in the data for the task at hand. When outputs $Y$ types' are of a \textit{qualitative} nature then it is said that it is a supervised classification problem. On the other hand, when the output takes continuous (or $\mathbb{R}$ dense) range of \textit{quantitative} values, the problem is said to be of supervised regression. For this work we will focus on the supervised aspect of machine learning.
+Supervised learning is then sub-categorized according to the type of information available in the data for the task at hand. When outputs $Y$ types' are of a \textit{qualitative} nature then it is said that it is a supervised classification problem. On the other hand, when the output takes continuous (or dense in a subset of $\mathbb{R}$) range of \textit{quantitative} values, the problem is said to be of supervised regression. For this work we will focus on the supervised aspect of machine learning.
