--- a/subsubsection_Notation_and_Terminology_For__.tex
+++ b/subsubsection_Notation_and_Terminology_For__.tex
@@ -34,7 +34,7 @@ In this particular case, even that even though the last column of the dataset in
 	\item Give an estimate of the probability density function for a user's calling time during weekdays.
 \end{itemize}
 
-The first two problems are examples of supervised learning where the $Y$ variables or \textit{labels} are the last and first features (columns) respectively. Even more, the first problem is a classification one since users are to be classified according to one of the three possible provinces whilst the second one is a regression problem for which the output could be any of a range of numerical values. The labels in classification problems are numerically encoded with a finite range of numbers being usually ${0,1}$ or ${-1,1}$ for the binary case.
+The first two problems are examples of supervised learning where the $Y$ variables or \textit{labels} are the last and first features (columns) respectively. Even more, the first problem is a classification one since users are to be classified according to one of the three possible provinces whilst the second one is a regression problem for which the output could be any of a range of numerical values. The labels in classification problems are numerically encoded with a finite range of numbers being usually $\{0,1\}$ or $\{-1,1\}$ for the binary case.
 
 Note here that there are no assumptions made here about the data which we take as is given %to us in this way. 
 This is common in machine learning applications and algorithms tend to be designed to account for this situation. The type of problems and questions that could be done then depend entirely on the training set. 
